fix: Update dependencies and Vite configuration
Upgrades Vite to version 7.3.0 and adjusts `framer-motion` version.
Updates `vite.config.ts` to define `process.env` as empty and mark React, ReactDOM, and Framer Motion as external dependencies in the Rollup build. This is to resolve potential build errors related to these libraries looking for `process` and to ensure CDN versions are used in development.

Removes some unused CSS properties and styles from `index.html` for cleaner code.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "framer-motion": "12.0.0",
-    "lucide-react": "0.460.0"
+    "framer-motion": "11.11.9",
+    "lucide-react": "0.460.0",
+    "vite": "^7.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
