refactor: Update dependencies and Vite config
Update React, framer-motion, and lucide-react to latest compatible versions. Configure Vite to externalize core dependencies and ensure consistency between development and production builds by excluding them from `optimizeDeps`. Change the project name to `yanimate-portfolio` and update the version.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
+
 {
-  "name": "copy-of-yanimate---architectural-portfolio",
+  "name": "yanimate-portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,16 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "framer-motion": "11.11.9",
-    "lucide-react": "0.460.0",
-    "vite": "^7.3.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "framer-motion": "^11.11.17",
+    "lucide-react": "^0.460.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "typescript": "^5.6.0",
+    "vite": "^6.0.0"
   }
 }
