--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^12.0.0",
     "lucide-react": "^0.460.0"
   },
   "devDependencies": {
@@ -20,5 +20,11 @@
     "@types/react-dom": "^19.0.0",
     "typescript": "^5.6.0",
     "vite": "^6.0.0"
+  },
+  "overrides": {
+    "framer-motion": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
