--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "framer-motion": "^12.0.0",
-    "lucide-react": "^0.460.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "framer-motion": "11.11.17",
+    "lucide-react": "0.460.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "typescript": "^5.6.0",
     "vite": "^6.0.0"
   },
